--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,12 +22,37 @@
         "prettier/prettier": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": "warn",
-        "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-        "quotes": ["error", "single"],
-        "semi": ["error", "always"],
-        "comma-dangle": ["error", "always-multiline"],
-        "arrow-parens": ["error", "always"],
-        "curly": ["error", "all"],
-        "max-len": ["error", { "code": 100 }]
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "argsIgnorePattern": "^_"
+            }
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ],
+        "comma-dangle": [
+            "error",
+            "always-multiline"
+        ],
+        "arrow-parens": [
+            "error",
+            "always"
+        ],
+        "curly": [
+            "error",
+            "all"
+        ],
+        "max-len": [
+            "error",
+            {
+                "code": 100
+            }
+        ]
     }
 }
